--- a/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
+++ b/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
@@ -1,125 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2A6EDCC4-C729-4BEE-9BB5-AC6F76B3BAC8}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClusterKit.API.Client</RootNamespace>
-    <AssemblyName>ClusterKit.API.Client</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\ClusterKit.API.Client.XML</DocumentationFile>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\ClusterKit.API.Client.XML</DocumentationFile>
+    <TargetFrameworks>net461</TargetFrameworks>
+    <PackageId>ClusterKit.API.Client</PackageId>
+    <Version>0.0.0.0-local</Version>
+    <Authors>ClusterKit</Authors>
+    <Description>Bundle of utils to create scalable and redundant services</Description>
+    <Company>Mikhail Kantarovskiy and ClusterKit contributors</Company>
+    <Product>ClusterKit</Product>
+    <Copyright>Copyright ©Mikhail Kantarovskiy and ClusterKit contributors 2017</Copyright>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\ClusterKit.API.Attributes\ClusterKit.API.Attributes.csproj">
-      <Project>{7654B200-7C4F-450C-8013-C59D7B6CE8B7}</Project>
-      <Name>ClusterKit.API.Attributes</Name>
-    </ProjectReference>
-    <Reference Include="Akka, Version=1.1.3.344, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\Akka.1.1.3.344-beta\lib\net45\Akka.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="JetBrains.Annotations">
-      <HintPath>..\..\packages\JetBrains.Annotations.10.2.1\lib\net\JetBrains.Annotations.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable, Version=1.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\packages\System.Collections.Immutable.1.3.1\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
-    <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
-      <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
-      <Name>ClusterKit.Core</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
-      <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
-      <Name>ClusterKit.Security.Client</Name>
-</ProjectReference>
-    <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Attributes/ClusterKit.Security.Attributes.csproj">
-      <Project>{42524C94-892D-4258-BD2C-D6F24D7BFABB}</Project>
-      <Name>ClusterKit.Security.Attributes</Name>
-</ProjectReference>
+    <ProjectReference Include="..\..\ClusterKit.Core\ClusterKit.Core\ClusterKit.Core.csproj" />
+    <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Attributes\ClusterKit.Security.Attributes.csproj" />
+    <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Client\ClusterKit.Security.Client.csproj" />
+    <ProjectReference Include="..\ClusterKit.API.Attributes\ClusterKit.API.Attributes.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="ApiDescription.cs" />
-    <Compile Include="ApiEnumType.cs" />
-    <Compile Include="ApiField.cs" />
-    <Compile Include="ApiMutation.cs" />
-    <Compile Include="ApiRequest.cs" />
-    <Compile Include="ApiObjectType.cs" />
-    <Compile Include="ApiType.cs" />
-    <Compile Include="Converters\ArrayConverter.cs" />
-    <Compile Include="Converters\DictionaryConverter.cs" />
-    <Compile Include="Converters\Pair.cs" />
-    <Compile Include="Converters\StringConverter.cs" />
-    <Compile Include="DataUpdater.cs" />
-    <Compile Include="DataUpdaterConfig.cs" />
-    <Compile Include="EnFieldFlags.cs" />
-    <Compile Include="EnScalarType.cs" />
-    <Compile Include="ErrorDescription.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="INodeConnection.cs" />
-    <Compile Include="Messages\ApiDiscoverRequest.cs" />
-    <Compile Include="Messages\ApiDiscoverResponse.cs" />
-    <Compile Include="Messages\SurrogatableJObject.cs" />
-    <Compile Include="Messages\SurrogateJObject.cs" />
-    <Compile Include="MutationApiRequest.cs" />
-    <Compile Include="MutationResult.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueryApiRequest.cs" />
-    <Compile Include="QueryResult.cs" />
-    <Compile Include="RequestPathElement.cs" />
-    <Compile Include="SortingCondition.cs" />
-    <Compile Include="SortingHelper.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
