--- a/ClusterKit.Core/bckp/ClusterKit.Web.csproj
+++ b/ClusterKit.Core/bckp/ClusterKit.Web.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net461</TargetFrameworks>
-    <PackageId>ClusterKit.LargeObjects.Tests</PackageId>
+    <PackageId>ClusterKit.Web</PackageId>
     <Version>0.0.0.0-local</Version>
     <Authors>ClusterKit</Authors>
     <Description>Bundle of utils to create scalable and redundant services</Description>
@@ -9,9 +9,4 @@
     <Product>ClusterKit</Product>
     <Copyright>Copyright ©Mikhail Kantarovskiy and ClusterKit contributors 2017</Copyright>
   </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.Core\ClusterKit.Core.TestKit\ClusterKit.Core.TestKit.csproj" />
-    <ProjectReference Include="..\ClusterKit.LargeObjects.Client\ClusterKit.LargeObjects.Client.csproj" />
-    <ProjectReference Include="..\ClusterKit.LargeObjects\ClusterKit.LargeObjects.csproj" />
-  </ItemGroup>
 </Project>
